--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@
 }
 
 .search-job .form-control{
-    max-width: 300px;
+    max-width: 290px;
     display: inline-flex;
     margin: 10px 5px;
     border-radius: 0;
@@ -621,6 +621,28 @@ footer .fa:hover{
     margin: 0 20px 100px 20px;
     margin-top: -36px;
 }
+
+#profile .modal-header h6{
+    font-size: 18px;
+    font-style: bold;
+}
+
+#profile .modal-body .form-control:focus{
+    box-shadow: 10px 0px 0px 0px #ffffff !important;
+}
+
+.custom-file .custom-file-input:focus{
+    box-shadow: 10px 0px 0px 0px #ffffff !important;
+}
+
+
+.custom-file .custom-file-input{
+    margin-top: 30px !important;
+}
+
+
+
+
 
 
 
